<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/orderText"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/lblAvailableItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/availableItems"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/catalog"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/lblAvailableItems"
                android:layout_marginLeft="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/orderLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblOrderedItems"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/orderedItems"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderTotal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/orderTotal"
                    android:textSize="21sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/selectedItems"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/finishOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/finishOrder"
                android:visibility="invisible" />

            <Button
                android:id="@+id/cancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/cancelOrder"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>